# termux-teos-full

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  deployment.md  docker-compose.full.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  grafana_dashboard.json  nginx.conf  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/ai/: intent_classifier.py  memory_manager.py  orchestrator.py  response_generator.py
app/core/: config.py  logging_setup.py  redis_client.py
app/middlewares/: security.py
app/models/: ai_memory.py  audit_log.py  base.py  music.py  order.py  payment_request.py  plugin.py  service.py  settings.py  system_health.py  tenant.py  ticket.py  transaction.py  user.py  user_session.py
app/plugins/: sample_plugin.py
app/services/: __init__.py  sms_service.py  (+16 more)
docs/: api_examples.md  api_reference.md  architecture_final.md  faq.md  plugin_development.md  security.md  troubleshooting.md
k8s/: deployment.yaml
nginx/: nginx.conf
scripts/: backup.sh  certbot_renew.sh  deploy.sh  dev_setup.sh  generate_secrets.sh  healthcheck.py  init-letsencrypt.sh  init_db.py  reset_admin.py  restore.sh  sample_data.py  seed_data.py
systemd/: teos.service
tests/: conftest.py  test_api_auth.py  test_e2e.py  test_load.py  test_music_api.py  test_performance.py  test_plugins.py  test_services.py  test_wallet.py
(+30 files in other folders)
