[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teos"
version = "1.0.0"
description = "Telegram Enterprise Operating System"
authors = [{name = "TEOS Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.3.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "openai>=1.7.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "alembic>=1.13.1",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
line_length = 100
